# v4r_ros

./: .gitignore  LICENSE  README.md
template/: CMakeLists.txt  package.xml
template/include/: template_node.h  template_node_defaults.h
template/include/template/: template.h  template_defaults.h
template/py/: template_pub.py
template/src/: template_node.cpp  template_node_parameters.cpp
template/src/template/: template.cpp  template_parameters.cpp
v4r_artoolkitplus/: CMakeLists.txt  package.xml
v4r_artoolkitplus/cfg/: ar_parameter.cfg
v4r_artoolkitplus/doc/: BchThin_pattern.odg
v4r_artoolkitplus/include/v4r_artoolkitplus/: artoolkitplus_node.h  v4r_artoolkitplus.h  v4r_artoolkitplus_defaults.h  v4r_artoolkitplus_node.h
v4r_artoolkitplus/launch/: demo_bag_multi_marker.launch  demo_bag_single_marker.launch  demo_live_multi_marker.launch  demo_live_single_marker.launch  multi_marker.launch  rviz.launch  rviz_multi.launch  single_marker.launch  single_marker_rect.launch
v4r_artoolkitplus/src/: artoolkitplus_node.cpp  v4r_artoolkitplus.cpp  v4r_artoolkitplus_draw.cpp  v4r_artoolkitplus_node.cpp  v4r_artoolkitplus_parameters.cpp
v4r_ellipses/: CMakeLists.txt  package.xml
v4r_ellipses/cfg/: EllipsesDetection.cfg
v4r_ellipses/include/: v4r_ellipses_nodelet.h  v4r_ellipses_nodelet_defaults.h
v4r_ellipses/include/v4r_ellipses/: dual_ellipses.h  v4r_ellipses.h  v4r_ellipses_defaults.h
v4r_ellipses/launch/: demo_bag.launch  rviz.launch
v4r_ellipses/launch/rviz/: demo.rviz
v4r_ellipses/msg/: ellipses.msg  markers.msg
v4r_ellipses/src/: v4r_ellipses_node.cpp  v4r_ellipses_nodelet.cpp  v4r_ellipses_nodelet_parameters.cpp
v4r_ellipses/src/v4r_ellipses/: dual_ellipsis.cpp  v4r_ellipses.cpp  v4r_ellipses_draw.cpp  v4r_ellipses_parameters.cpp
v4r_laser_filter/: CMakeLists.txt  package.xml
v4r_laser_filter/cfg/: CornerFilter.cfg  LineFilter.cfg
v4r_laser_filter/include/v4r_laser_filter/: v4r_laser_corner_filter_node.h  v4r_laser_filter_utils.h  v4r_laser_line_filter_node.h
v4r_laser_filter/src/: v4r_laser_corner_filter_node.cpp  v4r_laser_filter_utils.cpp  v4r_laser_line_filter_node.cpp  v4r_laser_range_filter_node.cpp
v4r_laser_robot_calibration/: CMakeLists.txt  package.xml
v4r_laser_robot_calibration/include/v4r/geometry/: line.h  linebase.h
v4r_laser_robot_calibration/include/v4r_laser_robot_calibration/: laser_robot_calibration_node.h
v4r_laser_robot_calibration/src/: laser_robot_calibration_node.cpp  line.cpp
v4r_msgs/: CMakeLists.txt  package.xml
v4r_msgs/msg/: Line.msg
v4r_opencv_cam/: CMakeLists.txt  package.xml
v4r_opencv_cam/cfg/: CameraParameters.cfg.general  CameraParameters.cfg.logitech  DellPrecisionM4700.yml  LogitechQickCamPro.yml
v4r_opencv_cam/cfg/rviz/: view_camera.rviz
v4r_opencv_cam/include/v4r_opencv_cam/: opencv_cam_defaults.h  opencv_cam_node.h
v4r_opencv_cam/launch/: LogitechQickCamPro.launch  laptop.launch  laptop_cam.launch
v4r_opencv_cam/src/: opencv_cam_node.cpp
v4r_ros/: CMakeLists.txt  README.rst  package.xml
v4r_uvc/: .gitignore  CMakeLists.txt  package.xml
v4r_uvc/cfg/: CameraGeneral.cfg  CameraLogitech.cfg  CameraLogitechSphere.cfg  CameraParameters.cfg  CameraParameters.cfg.general  CameraParameters.cfg.logitech  CameraParameters.cfg.txt
v4r_uvc/include/v4r_uvc/: v4r_uvc.h  v4r_uvc_defaults.h  v4r_uvc_node.h  v4r_uvc_ros.h
v4r_uvc/launch/: demo_reconfigure.launch  v4r_uvc.launch  v4r_uvc_dellM4700.launch  v4r_uvc_general.launch  v4r_uvc_logitech.launch  v4r_uvc_logitech_hires.launch  v4r_uvc_logitech_sphere.launch
v4r_uvc/src/: dynamic_reconfigure_test_node.cpp  update_dynamic_reconfigure.cpp  v4r_logitech_node.cpp  v4r_uvc_general_node.cpp  v4r_uvc_logitech_node.cpp  v4r_uvc_logitech_sphere_node.cpp
v4r_uvc/src/v4r_uvc/: v4r_uvc.cpp  v4r_uvc_node.cpp  v4r_uvc_ros.cpp
